--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <span class="span-2">Na Prática</span>
 
             <section class="links">
-                <a href="index.html">Inicio</a>
+                <a href="https://esterlany.github.io/teste/">Inicio</a>
                 <a href="acessorios.html">Acessorios</a>
                 <a href="peças.html">Peças</a>
                 <a href="manutencão.html">Manutencao</a>
